--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
+  dio: ^5.4.2+1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
@@ -20,4 +21,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-   - .env
+    - .env
