--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,16 @@ dependencies:
   go_router: ^13.2.3
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.3
 
 dev_dependencies:
+  build_runner: ^2.4.9
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
 
 flutter:
   uses-material-design: true
